fix location name overflow, when moving

--- a/client/sources/css/map/locations.styl
+++ b/client/sources/css/map/locations.styl
@@ -3,6 +3,7 @@
   z-index 2
   display flex
   align-items center
+  min-width 110px
   max-width 300px
   cursor pointer
 
